<resources>
    <string name="app_name">Trisho</string>
    <string name="action_settings">Settings</string>
    <string name="waiting">Wait please</string>
    <string name="no_connection">Not Internet connection</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="singin">Sing in</string>
    <string name="telephoneTV">telephone</string>
    <string name="password">password</string>
    <string name="user"></string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnNewUser">New user</string>
    <string name="tvName">Name:</string>
    <string name="title_activity_purchase_list">PurchaseListActivity</string>
    <string name="addPurchase">add new</string>
    <string name="labelPurchase">PURCHASES</string>
    <string name="shown" >Shown </string>
    <string name="labelProducts">PRODUCTS</string>
    <string name="labelDialogNewItem">Add product</string>
    <string name="etNewItemHint">Other product</string>
    <string name="btnOKNewItem">Add to purchase</string>
    <string name="addItem">Add products</string>
    <string name="btnSavePurchase">SAVE PURCHASE</string>
</resources>
