<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isolomonik.trisho.fragments.LoginFragment">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="340dp"
        android:layout_gravity="center">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telephoneEdit"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/telephoneTV"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEdit"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/password"
            android:id="@+id/passwordTV"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:text="@string/singin"
            android:id="@+id/singinBtn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:text="@string/btnNewUser"
            android:id="@+id/btnNewUser"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</FrameLayout>
