<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.isolomonik.trisho.fragments.DialogNewItemFragment"
              android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDialogNewItem"
        android:id="@+id/tvDialogNewItemLabel"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etNewItem"
        android:layout_gravity="center_horizontal"
        android:hint="@string/etNewItemHint"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvItemProposition"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btnOKNewItem"
        android:id="@+id/btnOKNewItem"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0" />
</LinearLayout>
